--- a/shippable.yml
+++ b/shippable.yml
@@ -16,6 +16,9 @@ script:
 after_script:
   - mkdir -p shippable/codecoverage
   - mv target/scala-2.11/coverage-report/cobertura.xml $PWD/shippable/codecoverage/
+notifications:
+    irc:  "chat.freenode.net#test-irc"
+    
   
   
   
