--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,9 @@
 language: scala
 #build_image: drydock/u12sca:tip
 #build_image: drydock/u14sca:tip
+env:
+    global:
+     - APP_NAME=scala
 
 
 
@@ -16,6 +19,8 @@ script:
 after_script:
   - mkdir -p shippable/codecoverage
   - mv target/scala-2.11/coverage-report/cobertura.xml $PWD/shippable/codecoverage/
+after_success :
+  - git push -f git@heroku.com:$APP_NAME.git master
 notifications:
     irc:  "chat.freenode.net#test-irc"
     
