--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,8 @@
 language: scala
 build_image: drydock/u12sca:tip
-#build_image: drydock/u14sca:tip
+build_image: drydock/u14sca:tip
 env:
+ global:
     - FOO=bar
     - BAR=foo
 
